@@ -53,7 +53,5 @@ $
 ●
 // the line below contains an IDEOGRAPHIC SPACE character (Used as a space in Chinese)
 　
-
 //////////////// English Stop Words ////////////////
-
 //////////////// Chinese Stop Words ////////////////
